@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2007/08/03 02:34:46 smb Exp $
+# $NetBSD: Makefile,v 1.2 2007/08/06 21:41:21 smb Exp $
 #
 
 DISTNAME=gtkhtml2_viewer-0.15.1
@@ -8,6 +8,9 @@ MASTER_SITES=	http://claws-mail.org/downloads/plugins/
 
 MAINTAINER=	smb@NetBSD.org
 COMMENT=	Renders HTML mail using the gtkhtml2 rendering widget
+PKGREVISION=	1
+
+PLIST_SRC+=	PLIST
 
 DEPENDS+=	claws-mail>=2.10.0:../../mail/claws-mail
 
